<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhizCalc</string>
    <string name="action_settings">Settings</string>
    <string name="AC">AC</string>
    <string name="C">C</string>
    <string name="plusMinus">\u00b1</string>
    <string name="percent">%</string>
    <string name="multiply">*</string>
    <string name="divide">\u00f7</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="history_hint">History items go here</string>
    <string name="resultLabel">Result:</string>
    <string name="resultsLabel">Results:</string>
    <string name="settings_title">Settings</string>
    <string name="setting_history_amount_prompt">History amount</string>
    <string name="setting_startupModePrompt">Startup Mode</string>
    <string name="settings_inputModePrompt">Input Mode</string>
    <string name="setting_shake_prompt">Shaking clears input</string>
    <string name="setting_defaultStartupPompt">Default Startup mode</string>
    <string name="setting_startupBasic">Basic</string>
    <string name="setting_startupAdvanced">Advanced (Scientific)</string>
    <string name="setting_startupLast">Last used</string>
    <string name="setting_startupGraph">Graphing</string>
    <string name="setting_startupClassic">Classic calculator</string>
    <string name="setting_switchMode">Switch To</string>
    <string name="setting_inputPostix">Postix</string>
    <string name="setting_inputInfix">Infix</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_switchMode">Swtich Mode</string>
    <string name="menu_item_aboutProgram">About WhizCalc</string>
    <string name="delete">Delete</string>
    <string name="copy_button_description">Copy to clipboard</string>

</resources>
