<?xml version="1.0" encoding="utf-8"?>
<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" -->
<!-- android:id="@+id/basicCalc_scrollView" -->
<!-- android:layout_width="match_parent" -->
<!-- android:layout_height="match_parent" -->
<!-- android:fillViewport="true"> -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical" >

    <!-- android:weightSum="10" > -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/basicCalc_resultLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_margin="4dp"
            android:text="@string/resultLabel" />

        <ExpandableListView
            android:id="@+id/basicCalc_result_ListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_margin="16dp"
            android:groupIndicator="@drawable/group_indicator"
            tools:listitem="@layout/group_item" >
        </ExpandableListView>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/basicCalc_working_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/calculator_background"
                android:gravity="center|right"
                android:text="0" />

            <android.support.v7.widget.GridLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/basicCalc_buttonsGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:alignmentMode="alignBounds"
                app:columnCount="4"
                app:orientation="horizontal"
                app:rowCount="6" >

                <Button
                    android:id="@+id/basicCalc_buttonAC"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/AC" />

                <Button
                    android:id="@+id/basicCalc_buttonC"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/C" />

                <Button
                    android:id="@+id/basicCalc_buttonUNDETERMINED"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left" />

                <Button
                    android:id="@+id/basicCalc_buttonPlusMinus"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/plusMinus" />

                <Button
                    android:id="@+id/basicCalc_buttonPERCENT"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/percent" />

                <Button
                    android:id="@+id/basicCalc_buttonDIV"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/divide" />

                <Button
                    android:id="@+id/basicCalc_buttonMULT"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/multiply" />

                <Button
                    android:id="@+id/basicCalc_buttonSUB"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/minus" />

                <Button
                    android:id="@+id/basicCalc_button7"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/basicCalc_button8"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/basicCalc_button9"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/nine" />

                <Button
                    android:id="@+id/basicCalc_buttonPLUS"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_gravity="fill_vertical"
                    app:layout_row="2"
                    app:layout_rowSpan="2"
                    android:layout_gravity="left"
                    android:text="@string/plus" />

                <Button
                    android:id="@+id/basicCalc_button4"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/basicCalc_button5"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/basicCalc_button6"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/basicCalc_button1"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/basicCalc_button2"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/basicCalc_button3"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/basicCalc_buttonEQUALS"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_gravity="fill_vertical|top"
                    app:layout_row="3"
                    app:layout_rowSpan="2"
                    android:layout_gravity="left"
                    android:text="@string/equals" />

                <Button
                    android:id="@+id/basicCalc_button0"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    app:layout_column="0"
                    app:layout_columnSpan="2"
                    app:layout_gravity="fill_horizontal"
                    android:layout_gravity="left"
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/basicCalc_buttonDECIMAL"
                    style="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/decimal" />
            </android.support.v7.widget.GridLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
<!-- </ScrollView> -->
