<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/setting_inputModeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_inputModePrompt" />

    <RadioGroup
        android:id="@+id/setting_inputModeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/setting_inputModeTV" >

        <RadioButton
            android:id="@+id/setting_inputInfix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/setting_inputInfix" />

        <RadioButton
            android:id="@+id/setting_inputPostfix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_inputPostix" />

        <RadioButton
            android:id="@+id/setting_inputClassicCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_startupClassic" />
    </RadioGroup>

</RelativeLayout>
